--- a/css/components.css
+++ b/css/components.css
@@ -487,7 +487,7 @@
 }
 
 /* ============================================
-   MODAL README - RESPONSIVO MEJORADO
+   MODAL README 
    ============================================ */
 
 .readme-responsive-modal.swal2-popup {
@@ -580,7 +580,7 @@
 }
 
 /* ============================================
-   FORMULARIOS RESPONSIVOS - MEJORADO
+   FORMULARIOS RESPONSIVOS 
    ============================================ */
 
 .form-modal-responsive.swal2-popup {
